# majibu-v5

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  app.json  celerybeat-schedule.db  coverage.sh  docker-compose.yml  env_template.txt  heroku_test.sh  main.py  notes.txt  prelease.sh  pyproject.toml  release_tasks.sh  run.sh  seed.sql  test.sh  usgi.py
alembic/: env.py
alembic/versions/: 00cc1d632c38_make_phone_unique_in_user_table.py  0bf0780086eb_add_type_field_in_notifications_model.py  106cbc163be1_create_usessessionstats_model.py  1665829ccdb1_remove_time_taken_from_results_model.py  1a1df6e5bcc8_create_users_table.py  23659a6edd21_create_total_field_in_results_model.py  31e8d4d504ba_make_answer_to_question_unique_in_.py  326818579324_create_useranswers_model.py  32799b7e6868_create_sessions_model.py  3b449cf5558f_add_amount_field_to_transactions_model.py  433e797c3175_create_pairing_range_field.py  50b54635932c_create_duosession_model.py  51fadd36b51d_remove_duosession_pending_status.py  520d37212be6_update_mpesapayments_model_with_new_.py  55b709f2cb7e_update_total_users_field_to_total_.py  5674e449782f_update_mpesapayments_model_amount_field_.py  61bee42614be_add_duosession_status.py  6776e0bea20c_update_account_field_to_phone_number_.py  6cb3761befa1_create_withdrawals_model.py  728c1d1372f8_add_recepient_field_in_notifications_.py  7dee92cb908f_create_transactions_model.py  9be61d418309_created_auth_model.py  a85fafab9d88_create_notifications_model.py  ab9bff3f5f8b_update_poolsessionstats_model.py  b0d3aa24b30f_create_mpesapayments_model.py  b181b883c17e_modify_duosession_status_field_to_.py  b39b38220ca7_make_transaction_code_column_unique.py  c3a8034e18dc_remove_time_related_fields_from_results_.py  c47a35be1f62_change_recipient_field_to_phone_field.py  d4ea2718023f_update_external_transaction_id_field_to_.py  e4607196b3a7_add_external_response_field_to_.py  e7e28db4a558_remove_duosession_status.py  eeec27641f8b_create_questions_model.py  f06c01aab65d_create_poolsessionstats_model.py  f6f0fee37586_create_results_model.py  (+2 more)
app/: backend_pre_start.py  conftest.py  main.py  worker.py
db/: dumpfile.sql
(+123 files in other folders)
