[tool.poetry]
name = "majibu"
version = "0.1.0"
description = ""
authors = ["waruingugi <waruingugientp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.9"
sqlalchemy-utils = "^0.40.0"
redis = "^4.5.4"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
