[tool.poetry]
name = "majibu"
version = "0.1.0"
description = ""
authors = ["waruingugi <waruingugientp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.9"
sqlalchemy-utils = "^0.40.0"
redis = "^4.5.4"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
fastapi-sqlalchemy-filter = "^0.2.5"
fastapi-pagination = "^0.12.1"
asyncpg = "^0.27.0"
phonenumbers = "^8.13.8"
phone-gen = "^2.2.25"
pytest = "^7.3.0"
tenacity = "^8.2.2"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pytest-mock = "^3.10.0"
pyotp = "^2.8.0"
requests = "^2.28.2"
httpx = "^0.24.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
slowapi = "^0.1.8"
asgi-correlation-id = "^4.2.0"
pytest-cov = "^4.0.0"
ggshield = "^1.15.0"
celery = "^5.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
